--- a/app/pages/properties/propertyinfo/propertyinfo.component.html
+++ b/app/pages/properties/propertyinfo/propertyinfo.component.html
@@ -45,7 +45,7 @@
                     <div class="col-xs-4">
                         <singleselect-field-cmp *ngIf="propertiesService.managers.length || propertyForm.controls.ManagerUser.value"
                                                 [dataList]="propertiesService.managers"
-                                                [options]="{title: 'Managers List', default: 'Select Managers'}"
+                                                [options]="{title: 'Manager', default: 'Select Manager'}"
                                                 [field]="propertyForm.controls.ManagerUser"></singleselect-field-cmp>
                     </div>
                 </div>
