--- a/app/components/dashboard-filter/dashboard-filter.component.html
+++ b/app/components/dashboard-filter/dashboard-filter.component.html
@@ -9,14 +9,14 @@
                     <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="material-icons">euro_symbol</i></span>
-                            <input-field-cmp [data]="{title: 'From ($)', name: 'MinRate', type: 'number'}"
+                            <input-field-cmp [data]="{title: 'From (€)', name: 'MinRate', type: 'number'}"
                                              [field]="filterForm.controls.MinRate"></input-field-cmp>
                         </div>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="material-icons">euro_symbol</i></span>
-                            <input-field-cmp [data]="{title: 'To $', name: 'MaxRate', type: 'number'}"
+                            <input-field-cmp [data]="{title: 'To (€)', name: 'MaxRate', type: 'number'}"
                                              [field]="filterForm.controls.MaxRate"></input-field-cmp>
                         </div>
                     </div>
