--- a/app/components/enquiry/proposal/proposal.component.html
+++ b/app/components/enquiry/proposal/proposal.component.html
@@ -1,4 +1,5 @@
 <div [formGroup]="proposalManagerForm" *ngIf="loginService.getRoles('Manager')">
+    {{enquiryService.enquiry.Subject}}
     <div class="enquiry-body">
         <div class="row">
             <div class="col-xs-12">
@@ -48,7 +49,7 @@
                                              [field]="proposalManagerForm.controls.RentalCost"></input-field-cmp>
                         </div>
                         <div class="input-group fees">
-                            <span>+ fees </span><i class="material-icons">euro_symbol</i> 100
+                            <span>+ fees </span><i class="material-icons">euro_symbol</i> {{proposalManagerForm.controls.Fees.value}}
                         </div>
                     </div>
                 </div>
@@ -165,33 +166,33 @@
 
 
 </div>
-<div [formGroup]="proposalForm" *ngIf="loginService.getRoles('Agent')">
+<div [formGroup]="proposalManagerForm" *ngIf="loginService.getRoles('Agent')">
     <div class="enquiry-body">
         <div class="row">
             <div class="col-xs-12">
                 <div class="proposal-line">Proposal</div>
             </div>
         </div>
-        <div *ngIf="!data.Enquiry.Proposal" class="row">
+        <div *ngIf="!data.Enquiry.Proposal || !data.Enquiry.Proposal.SubmittedAt" class="row">
             <div class="col-xs-12 text-center">
                 <p>There’s no proposal created by manager of this property.</p>
                 <p>Please wait for proposal</p>
             </div>
         </div>
-        <div *ngIf="data.Enquiry.Proposal">
+        <div *ngIf="data.Enquiry.Proposal && data.Enquiry.Proposal.SubmittedAt">
             <div class="row">
                 <div class="col-xs-6">
                     <div class="input-group p-l-5">
                         <span class="input-group-addon"><i class="material-icons">person</i></span>
                         <input-field-cmp [data]="{title: 'Customer Name', type: 'text'}"
-                                         [field]="proposalForm.controls.CustomerName"></input-field-cmp>
+                                         [field]="proposalManagerForm.controls.CustomerName"></input-field-cmp>
                     </div>
                 </div>
                 <div class="col-xs-6">
                     <div class="input-group p-r-15">
                         <span class="input-group-addon"><i class="material-icons">location_city</i></span>
                         <input-field-cmp [data]="{title: 'Property', type: 'text'}"
-                                         [field]="proposalForm.controls.PropertyName"></input-field-cmp>
+                                         [field]="proposalManagerForm.controls.PropertyName"></input-field-cmp>
                     </div>
                 </div>
             </div>
@@ -200,14 +201,14 @@
                     <div class="input-group p-l-5">
                         <span class="input-group-addon"><i class="material-icons">insert_invitation</i></span>
                         <input-field-cmp [data]="{title: 'Check In', type: 'text'}"
-                                         [field]="proposalForm.controls.CheckIn"></input-field-cmp>
+                                         [field]="proposalManagerForm.controls.CheckIn"></input-field-cmp>
                     </div>
                 </div>
                 <div class="col-xs-6">
                     <div class="input-group p-r-15">
                         <span class="input-group-addon"><i class="material-icons">insert_invitation</i></span>
                         <input-field-cmp [data]="{title: 'CheckOut', type: 'text'}"
-                                         [field]="proposalForm.controls.CheckOut"></input-field-cmp>
+                                         [field]="proposalManagerForm.controls.CheckOut"></input-field-cmp>
                     </div>
                 </div>
             </div>
@@ -216,7 +217,7 @@
                     <div class="input-group p-l-5 p-r-15">
                         <span class="input-group-addon"><i class="material-icons">euro_symbol</i></span>
                         <input-field-cmp [data]="{title: 'Rental Price', type: 'text'}"
-                                         [field]="proposalForm.controls.RentalPrice"></input-field-cmp>
+                                         [field]="proposalManagerForm.controls.RentalCost"></input-field-cmp>
                     </div>
                 </div>
             </div>
@@ -227,7 +228,7 @@
                         <span class="input-group-addon"><i class="material-icons">description</i></span>
                         <div class="form-group label-floating">
                             <label class="control-label">Terms & Conditions Contract</label>
-                            <span class="form-control-static"><a href="#">{{proposalForm.controls.TermsPdf.value}}</a></span>
+                            <span class="form-control-static"><a href="#">{{proposalManagerForm.controls.DefaultTerms.value.Name}}</a></span>
                         </div>
                     </div>
                 </div>
@@ -236,7 +237,7 @@
                         <span class="input-group-addon"><i class="material-icons">description</i></span>
                         <div class="form-group label-floating">
                             <label class="control-label">Cancellation Policy Contract</label>
-                            <span class="form-control-static"><a href="#">{{proposalForm.controls.PolicyPdf.value}}</a></span>
+                            <span class="form-control-static"><a href="#">{{proposalManagerForm.controls.CancellationPolicy.value.Name}}</a></span>
                         </div>
                     </div>
                 </div>
@@ -247,7 +248,7 @@
                     <div class="terms p-l-r-10">
                         <h5>Terms</h5>
                         <ol class="m-b-none">
-                            <li *ngFor="let term of proposalForm.controls.TermsList.value">{{term}}</li>
+                            <li *ngFor="let term of proposalManagerForm.controls.TermsList.value">{{term}}</li>
                         </ol>
                     </div>
                 </div>
@@ -258,10 +259,10 @@
                     <div class="terms p-l-r-10">
                         <h5>Payment Terms</h5>
                         <ul>
-                            <li><strong>{{proposalForm.controls['Payment'].controls['PayUpfront'].value}}%</strong> payable upfront</li>
+                            <li><strong>{{proposalManagerForm.controls['DepositPercentage'].value}}%</strong> payable upfront</li>
                             <li>
-                                <strong>{{proposalForm.controls['Payment'].controls['PayPercent'].value}}%</strong> payable
-                                <strong>{{proposalForm.controls['Payment'].controls['PayWeeks'].value}}</strong> weeks before check in
+                                <strong>{{proposalManagerForm.controls['BalancePercentage'].value}}%</strong> payable
+                                <strong>{{proposalManagerForm.controls['BalanceDaysBeforeCheckIn'].value}}</strong> weeks before check in
                             </li>
                         </ul>
                     </div>
@@ -271,14 +272,14 @@
     </div>
     <div class="enquiry-footer p-l-r-30">
         <!--no proposal agent buttons-->
-        <div *ngIf="!data.Enquiry.Proposal" class="row">
+        <div *ngIf="!data.Enquiry.Proposal || !data.Enquiry.Proposal.SubmittedAt" class="row">
             <div class="col-xs-6">
                 <button type="button" class="btn btn-danger m-l-10">Cancel</button>
             </div>
         </div>
         <!--no proposal agent buttons end-->
         <!--proposal agent buttons-->
-        <div *ngIf="data.Enquiry.Proposal" class="row">
+        <div *ngIf="data.Enquiry.Proposal && data.Enquiry.Proposal.SubmittedAt" class="row">
             <div class="col-xs-6">
                 <button type="button" class="btn btn-danger m-l-10" (click)="declineProposal()">Decline</button>
             </div>
