--- a/app/components/enquiry/dialog/dialog.component.html
+++ b/app/components/enquiry/dialog/dialog.component.html
@@ -8,7 +8,7 @@
             </div>
             <div class="row" *ngFor="let item of data; let i = index">
                 <div class="col-xs-12">
-                    <div *ngIf="!item.SystemGenerated" class="message to">
+                    <div *ngIf="!item.SystemGenerated" class="message" [ngClass]="{to: item.IsMine, from: !item.IsMine}">
                         <div class="message-text">{{item.Content}}</div>
                         <div class="message-date pull-left">Read at 1:42 pm</div>
                         <div class="message-date">1:38 pm</div>
