--- a/app/components/enquiry/proposal/proposal.component.html
+++ b/app/components/enquiry/proposal/proposal.component.html
@@ -1,5 +1,4 @@
 <div [formGroup]="proposalManagerForm" *ngIf="loginService.getRoles('Manager')">
-    {{enquiryService.enquiry.Subject}}
     <div class="enquiry-body">
         <div class="row">
             <div class="col-xs-12">
@@ -66,7 +65,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-6">
+                <div class="col-xs-6 col-md-12 col-lg-6">
                     <div class="input-group p-l-5">
                         <span class="input-group-addon"><i class="material-icons">description</i></span>
                         <div class="form-group label-floating select-component always-visible">
@@ -77,7 +76,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-6">
+                <div class="col-xs-6 col-md-12 col-lg-6">
                     <div class="input-group p-r-15">
                         <span class="input-group-addon"><i class="material-icons">description</i></span>
                         <div class="form-group label-floating select-component always-visible">
@@ -158,7 +157,7 @@
             </div>
             <div class="col-xs-8">
                 <button type="button" class="btn btn-success-green pull-right font-16 m-r-10" (click)="submitProposal()">Submit</button>
-                <button type="button" class="btn btn-success pull-right font-16 m-r-20 p-l-r-20" (click)="saveProposal()">Save</button>
+                <button type="button" class="btn btn-success pull-right font-16 m-r-10 p-l-r-20" (click)="saveProposal()">Save</button>
             </div>
         </div>
         <!--proposal manager buttons end-->
@@ -223,7 +222,7 @@
             </div>
             <!--agent contracts-->
             <div class="row">
-                <div class="col-xs-6">
+                <div class="col-xs-6 col-md-12 col-lg-6">
                     <div class="input-group p-l-5">
                         <span class="input-group-addon"><i class="material-icons">description</i></span>
                         <div class="form-group label-floating">
@@ -232,7 +231,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-6">
+                <div class="col-xs-6 col-md-12 col-lg-6">
                     <div class="input-group p-r-15">
                         <span class="input-group-addon"><i class="material-icons">description</i></span>
                         <div class="form-group label-floating">
